tests/errors/first_stage/operation/invalid_index/invalid_index.as
; the index (in square brackets) was invalid
arr: .data 1, -2, 4, -6, 8, -10, 12
mov arr[3], arr[a]
